# app/api-doc/youth-api-documentation.json
@@ -165,15 +165,99 @@
             "put": {
                 "summary": "update",
                 "description": "API endpoint to update the specified Youth profile.A successful request response will show 200 HTTP status code",
-                "requestBody": {
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/youthRegistration"
-                            }
+                "parameters": [
+                    {
+                        "name": "youthId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },{
+                        "name": "first_name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "ABC Name"
+                        }
+                    },
+                    {
+                        "name": "last_name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "Last Name"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "email",
+                            "example": "test.12233@gmail.com"
+                        }
+                    },
+                    {
+                        "name": "mobile",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "01717177126"
+                        }
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "1/2 Dhaka, Bangladesh"
+                        }
+                    },
+                    {
+                        "name": "zip_or_postal_code",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "1234"
+                        }
+                    },
+                    {
+                        "name": "bio",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "A required Microsoft Windows system directory, the System32 directory is located in either C:\\Windows\\System32 or C:\\Winnt\\system32 directory. The system32 directory contains Windows system files and software program files, vital to the operation of the Windows operating system and software programs running in Windows. The most common types of files found in the system32 directory are DLL (Dynamic Link Library) and EXE (executable) files."
+
+                        }
+                    },
+                    {
+                        "name": "photo",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "https://www.pngitem.com/pimgs/m/80-800194_transparent-users-icon-png-flat-user-icon-png.png"
+                        }
+                    },
+                    {
+                        "name": "cv_path",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "http://laspoderosasteatro.com/wp-content/uploads/2021/01/fiverr-resume-writing-service-writer-templates-review-software-professional.jpg"
                         }
                     }
-                },
+                ],
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -183,53 +267,7 @@
                                     "$ref": "#/components/schemas/youthRegistration"
                                 },
                                 "example": {
-                                    "data": {
-                                        "id": 1,
-                                        "name_en": "abc",
-                                        "name_bn": "abc",
-                                        "mobile": "abc",
-                                        "email": "01711111111",
-                                        "father_name_en": "",
-                                        "father_name_bn": "",
-                                        "mother_name_en": "",
-                                        "mother_name_bn": "",
-                                        "guardian_name_en": "",
-                                        "guardian_name_bn": "",
-                                        "relation_with_guardian": "",
-                                        "number_of_siblings": null,
-                                        "gender": 0,
-                                        "date_of_birth": "0000-00-00",
-                                        "birth_certificate_no": null,
-                                        "nid": "",
-                                        "passport_number": "",
-                                        "nationality": "abc",
-                                        "religion": 0,
-                                        "marital_status": 0,
-                                        "current_employment_status": 0,
-                                        "main_occupation": "",
-                                        "other_occupation": "",
-                                        "personal_monthly_income": 0,
-                                        "year_of_experience": 0,
-                                        "physical_disabilities_status": 0,
-                                        "freedom_fighter_status": 0,
-                                        "present_address_division_id": 0,
-                                        "present_address_district_id": 0,
-                                        "present_address_upazila_id": 0,
-                                        "present_house_address": "",
-                                        "permanent_address_division_id": 0,
-                                        "permanent_address_district_id": 0,
-                                        "permanent_address_upazila_id": 0,
-                                        "permanent_house_address": "",
-                                        "is_ethnic_group": 0,
-                                        "photo": "",
-                                        "signature": ""
-                                    },
-                                    "_response_status": {
-                                        "success": true,
-                                        "code": 200,
-                                        "started": "12 37 07",
-                                        "finished": "12 37 07"
-                                    }
+
                                 }
                             }
                         }
@@ -305,6 +343,11 @@
                             ]
                         }
                     },
+                    "user_name_type": {
+                        "type": "integer",
+                        "enum": [1,2],
+                        "description":"1=>Email Type, 2=>Mobile Number"
+                    },
                     "email": {
                         "type": "string",
                         "format": "email"
@@ -334,11 +377,13 @@
                     },
                     "password": {
                         "type": "string",
-                        "format": "password"
+                        "format": "password",
+                        "example": "#Piyal_15021#"
                     },
                     "password_confirmation": {
                         "type": "string",
-                        "format": "password"
+                        "format": "password",
+                        "example": "#Piyal_15021#"
                     },
                     "deleted_at": {
                         "type": "string",
@@ -366,7 +411,63 @@
                     "skills",
                     "password",
                     "password_confirmation",
-                    "physical_disability_status"
+                    "physical_disability_status",
+                    "user_name_type",
+                    "date_of_birth"
+                ]
+            },
+            "youthProfileUpdateSchema": {
+                "type": "object",
+                "description": "Youth Profile",
+                "properties": {
+                    "first_name": {
+                        "type": "string",
+                        "example": "ABC Name"
+                    },
+                    "last_name": {
+                        "type": "string",
+                        "example": "abc"
+                    },
+                    "email": {
+                        "type": "string",
+                        "format": "email",
+                        "example": "test.123@gmail.com"
+                    },
+                    "mobile": {
+                        "type": "string",
+                        "example": "01767111434"
+                    },
+                    "city": {
+                        "type": "string",
+                        "example": "1/2 Dhaka Bangladesh"
+                    },
+                    "zip_or_postal_code": {
+                        "type": "string",
+                        "example": "12345"
+                    },
+                    "bio": {
+                        "type": "string",
+                        "example": "A required Microsoft Windows system directory, the System32 directory is located in either C:\\Windows\\System32 or C:\\Winnt\\system32 directory. The system32 directory contains Windows system files and software program files, vital to the operation of the Windows operating system and software programs running in Windows. The most common types of files found in the system32 directory are DLL (Dynamic Link Library) and EXE (executable) files."
+
+                    },
+                    "photo": {
+                        "type": "string",
+                        "example": "photo.png"
+                    },
+                    "cv_path": {
+                        "type": "string",
+                        "example": "cv_path.png"
+                    }
+                },
+                "required": [
+                    "first_name",
+                    "last_name",
+                    "gender",
+                    "email",
+                    "mobile",
+                    "city",
+                    "zip_or_postal_code",
+                    "bio"
                 ]
             }
         }
